# ML-Pipeline

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Threat_Detection_ML_Pipeline_Production_Plan.docx  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cd.yml  ci.yml
configs/: paths.yaml
docs/: aws.md  dagshub.md  sprint-0.md  sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md
load/: locustfile.py
src/threat_detection/: __init__.py  cli.py  config.py  logging_utils.py  paths.py  registry.py  tracking.py
src/threat_detection/data/: __init__.py  generate.py  loaders.py  schema.py  synthetic.py
src/threat_detection/evaluation/: __init__.py  gate.py  gate_check.py  leakage.py  metrics.py
src/threat_detection/features/: __init__.py  build.py  cleaning.py  tabular.py  target.py  text.py
src/threat_detection/ingestion/: __init__.py
src/threat_detection/models/: __init__.py  anomaly.py  classifier.py  fusion.py  text_baseline.py  text_lstm.py
src/threat_detection/serving/: __init__.py  app.py  explain.py  metrics.py  model_bundle.py  schemas.py
src/threat_detection/training/: __init__.py  train_fusion.py  train_tabular.py  train_text.py
tests/: conftest.py
tests/integration/: test_generate_data.py  test_preprocess_pipeline.py  test_serving_api.py  test_train_tabular.py  test_train_text.py
tests/unit/: test_cleaning.py  test_config.py  test_devops.py  test_fusion.py  test_gate.py  test_leakage.py  test_metrics.py  test_models.py  test_paths.py  test_registry.py  test_schema.py  test_serving_unit.py  test_synthetic.py  test_tabular_preprocess.py  test_target.py  test_text_lstm.py  test_text_tokenizer.py  test_tracking.py
