[project]
name = "threat-detection"
version = "0.1.0"
description = "Near-real-time network threat-detection ML pipeline (CICIDS2017 + command/payload NLP) with full MLOps backbone."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Arpit Dhiman", email = "arpitdhiman184@gmail.com" }]

# --- Core runtime dependencies (needed by almost every sprint) ---
dependencies = [
    "numpy>=1.26,<2.2",
    "pandas>=2.2,<2.3",
    "pyarrow>=16.0",            # fast parquet I/O for the data zones
    "pyyaml>=6.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3",
    "typer>=0.12",             # CLI entrypoints (generate-data, train, etc.)
    "rich>=13.7",              # readable logs / CLI output
    "structlog>=24.1",        # structured JSON logging for production
]

[project.scripts]
# Single CLI surface for the whole project: `td <command>`
td = "threat_detection.cli:app"

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735). Install per-sprint to keep environments light.
#   Sprint 0-1 : --group dev --group mlops
#   Sprint 2   : + --group ml
#   Sprint 3   : + --group text
#   Sprint 4   : + --group serving
#   Sprint 5-6 : + --group cloud  (everything)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.100",       # property-based tests for the data/feature layer
    "ruff>=0.5",               # lint + format
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
]
ml = [
    "scikit-learn>=1.5,<1.6",
    "xgboost>=2.1",
    "imbalanced-learn>=0.12",  # SMOTE inside CV folds
    "optuna>=3.6",
    "shap>=0.45",
    "joblib>=1.4",
]
text = [
    "torch>=2.3",
]
serving = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",             # used by FastAPI TestClient for integration tests
    "prometheus-client>=0.20", # /metrics endpoint
]
mlops = [
    "mlflow>=2.14,<3.0",
    "dvc>=3.51",
    "evidently>=0.4.30,<0.5",
]
cloud = [
    "dvc-s3>=3.2",
    "boto3>=1.34",
    "locust>=2.29",            # load test in Sprint 4/5
]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------
[tool.uv]
# `uv sync` installs the project + the 'default-groups' below unless overridden.
default-groups = ["dev", "mlops"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threat_detection"]

# ---------------------------------------------------------------------------
# Tooling config
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --import-mode=importlib"
pythonpath = ["src"]
markers = [
    "unit: fast, isolated unit tests (no I/O, no network)",
    "integration: cross-component tests (may touch disk, services)",
    "slow: long-running tests (training, load tests)",
]

[tool.coverage.run]
branch = true
source = ["src/threat_detection"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "RUF"]
ignore = ["N803", "N806"]  # allow ML-style variable names (X, y, X_train)

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are expected in tests

[tool.mypy]
python_version = "3.12"
packages = ["threat_detection"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
